--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> A Jornada de Pallet </title>
+    <link rel="stylesheet" href="./estilo.css">
 </head>
 <body>
    <h1>TESTE</h1> 
