--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <main>
-    <img. scr ="" alt="">
+    <img src="./hx7zrahh7wlf1.jpeg" alt="">
     <p></p>
     <button></button>
     <button></button>
