--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> A Jornada de Pallet </title>
     <link rel="stylesheet" href="./estilo.css">
 </head>
+
 <body>
-   <main>
-    <img src="./hx7zrahh7wlf1.jpeg" alt="">
-    <p></p>
-    <button></button>
-    <button></button>
     <main>
-   <script src="./main.js"></script>
+        <div class="passo ativo" id="passo-0">
+            <img src="./hx7zrahh7wlf1.jpeg" alt="">
+            <p>Você acaba de completar 10 anos e hoje é o dia de 
+                receber seu primeiro Pokémon do Professor Oak. 
+                Sua cidade natal, Pallet, está em festa. 
+                Ao chegar ao laboratório, você tem duas opções de Pokémon para começar sua jornada: 
+                Bulbasaur, o Pokémon tipo Grama, e Charmander, o Pokémon tipo Fogo. 
+                Qual você escolhe?</p>
+            <button> Escolher Bulbasaur:</button>
+            <button>Escolher Charmander:</button>
+        </div>
+    </main>
+                <script src="./main.js"></script>
 </body>
+
 </html>
