--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="./hx7zrahh7wlf1.jpeg" alt="">
+            <img class="ima01"src="./hx7zrahh7wlf1.jpeg" alt="">
             <p>Você acaba de completar 10 anos e hoje é o dia de 
                 receber seu primeiro Pokémon do Professor Oak. 
                 Sua cidade natal, Pallet, está em festa. 
