--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 Ao chegar ao laboratório, você tem duas opções de 
                 Pokémon para começar sua jornada: Bulbasaur, o 
                 Pokémon tipo Grama, e Charmander, o Pokémon tipo Fogo. Qual você escolhe?</p>
-            <button> Escolher Bulbasaur:</button>
-            <button>Escolher Charmander:</button>
+            <button class="btn-proximo" data-proximo="01" > Escolher Bulbasau</button >
+            <button> Escolher Charmander: </button
         </div>
     </main>
                 <script src="./main.js"></script>
