--- a/index.html
+++ b/index.html
@@ -19,8 +19,17 @@
                 Pokémon para começar sua jornada: Bulbasaur, o 
                 Pokémon tipo Grama, e Charmander, o Pokémon tipo Fogo. Qual você escolhe?</p>
             <button class="btn-proximo" data-proximo="01" > Escolher Bulbasau</button >
-            <button> Escolher Charmander: </button
+            <button> Escolher Charmander: </button>
         </div>
+        <div class="passo ativo" id="passo-0">
+            <img class="img01"src="./hx7zrahh7wlf1.jpeg" alt="">
+            <p>Você e Bulbasaur partem para a Rota 1, a primeira estrada para a cidade de Viridian
+                . A floresta é densa, e você ouve o som de Pokémon selvagens
+                . Sua jornada está apenas começando.
+            </p>
+            <button class="btn-proximo" data-proximo="01" > Seguir a trilha principal</button >
+            <button> Explorar uma trilha alternativa: </button>
+        </div>r
     </main>
                 <script src="./main.js"></script>
 </body>
