--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button> Escolher Charmander: </button>
         </div>
         <div class="passo ativo" id="passo-0">
-            <img class="img01"src="./hx7zrahh7wlf1.jpeg" alt="">
+            <img class="img01" src="./depositphotos_225179234-stock-photo-asian-rainforest-jungle-august.jpg" alt="">
             <p>Você e Bulbasaur partem para a Rota 1, a primeira estrada para a cidade de Viridian
                 . A floresta é densa, e você ouve o som de Pokémon selvagens
                 . Sua jornada está apenas começando.
