--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </p>
             <button class="btn-proximo" data-proximo="01" > Seguir a trilha principal</button >
             <button> Explorar uma trilha alternativa: </button>
-        </div>r
+        </div>
     </main>
                 <script src="./main.js"></script>
 </body>
