--- a/index.html
+++ b/index.html
@@ -11,24 +11,35 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img class="img01"src="./hx7zrahh7wlf1.jpeg" alt="">
+            <img class="img01" src="./hx7zrahh7wlf1.jpeg" alt="">
             <p>Você acaba de completar 10 anos e hoje é o dia de 
                 receber seu primeiro Pokémon do Professor Oak. 
                 Sua cidade natal, Pallet, está em festa. 
                 Ao chegar ao laboratório, você tem duas opções de 
                 Pokémon para começar sua jornada: Bulbasaur, o 
                 Pokémon tipo Grama, e Charmander, o Pokémon tipo Fogo. Qual você escolhe?</p>
-            <button class="btn-proximo" data-proximo="01" > Escolher Bulbasau</button >
-            <button> Escolher Charmander: </button>
+            <button class="btn-proximo" data-proximo="1" > Escolher Bulbasau</button >
+            <button class="btn-proximo" data-proximo="2"> Escolher Charmander: </button>
         </div>
-        <div class="passo ativo" id="passo-0">
+        <div class="passo" id="passo-1">
             <img class="img01" src="./depositphotos_225179234-stock-photo-asian-rainforest-jungle-august.jpg" alt="">
             <p>Você e Bulbasaur partem para a Rota 1, a primeira estrada para a cidade de Viridian
                 . A floresta é densa, e você ouve o som de Pokémon selvagens
                 . Sua jornada está apenas começando.
             </p>
-            <button class="btn-proximo" data-proximo="01" > Seguir a trilha principal</button >
-            <button> Explorar uma trilha alternativa: </button>
+            <button class="btn-proximo" data-proximo="11" > Seguir a trilha principal</button >
+            <button class="btn-proximo" data-proximo="12"> Explorar uma trilha alternativa: </button>
+        </div>
+        <div class="passo" id="passo-2">
+            <img class="img01" src="./Design-sem-nome-1-e1744561238543.webp" alt="">
+            <p>Você e Charmander partem para a Rota 1.
+                 Charmander está cheio de energia e ansioso para a primeira batalha. 
+                A cidade de Viridian está logo à frente.
+                
+                
+            </p>
+            <button class="btn-proximo" data-proximo="21" > ir direto para Viridian</button >
+            <button class="btn-proximo" data-proximo="22"> Parar para treinar </button>
         </div>
     </main>
                 <script src="./main.js"></script>
